sass/custom.css
@import "colors";

body {
  font-family: 'Mulish', sans-serif;
  font-size: 1.8em;
}

#topbar img, .hamburger img {width:30px;}
.topbar { padding: 2rem 4rem;}
.container {
  max-width: 800px; }
.container-wide {width:100%;margin: 0; padding:0;}

section.hero {
    width:100%;
    background-color:#d4e8f6;
    background-image: url("../images/FocusRetreat-topimage-1600.jpg");
    background-size:cover;
    background-position:center;
    padding-top:16rem;
    padding-bottom:16rem;
    text-align: center;}

.hero h1 img {
    width: 450px; height:auto;
}
.hero h2 {
  color:black;
  margin-top: 40px;
  margin-bottom:60px;
  background: rgba(255,255,255, 0.6);
  font-size:3.8rem;
  padding-top:8px;
  padding-bottom:8px;
  /* text-shadow:0px 0px 10px #ffffff;*/
}
.myTitle h2 {margin-bottom:0;}
.callout-text {
  text-align: center;
  margin:0;
  padding: 6rem 7%;
}
.emphasis {font-weight: 600;}
.contents {padding:6rem 7% 6rem 7%;}
.lesswide {padding: 4rem 20%;}
.blue {background-color: #01286e;color:white;}
.bluegradient {
  background: rgb(6,0,116);
  background: linear-gradient(0deg, rgba(6,0,116,1) 0%, rgba(36,36,219,1) 44%, rgba(54,155,218,1) 100%);
  color:white;
}
.purpleheather {background-color: #4b5089;color:white;}
.pine {background-color: #344c2c;color:white;}
.lightpine {background-color: #6b887a; color:white;}
.honey {background-color: #e7c082;color:#222;}
.sage {background-color: #a9a486;color: #222;}
.heather {background-color: #a9a486;color:white;}
.grey {background-color: #bbcddf;color:#222;}
.lightgrey {background-color: #d6dce1;color:#222;}
.lightblue {background-color: #3993e8;color:white;} /* 40a1fc */
.brick {background-color:#70441b; color:white;}
.charcoal {background: #515151; color:white;}  /* was 645e5b */
.sky {color:#67bffd;}
.gold {color:#ddae2c;}

.box {padding:1rem 1.3rem;
  font-size: 1.5rem;
  border-radius: 8px;
  margin-bottom:20px;
  box-shadow: 0px 10px 14px -7px #000000;
}
.box ul li {line-height:1.7rem;}
.box img {
  margin-left:8%;
  width:80%;
  margin-bottom:40px;
}
.pic1 {
  color:white;
  padding: 8rem 7% 6rem;
  font-size: 2.4rem;
  background: url("../images/background-pineforest.jpg") rgba(0, 33, 105, 0.2);
  background-size:cover;
  background-blend-mode: overlay;
}
#place {
  color:black;
  font-weight:400;
  text-shadow:0px 0px 10px #ffffff;
  background: url("../images/hills2.jpg")  rgba(255, 255, 255, 0.4);
  background-size:cover;
  background-blend-mode: screen;
}
.pic3 {
  background: url("../images/sunset.jpg");
  background-size:cover;
  background-position: center;
  padding:18rem;
}
.myButton {
  box-shadow: 0px 10px 14px -7px #000000;
  background-color:#ddae2c;
	background:linear-gradient(to bottom, #ddae2c 5%, #925d0d 100%);
  text-shadow:0px 1px 0px #70441b;
  border: 0px;
  text-transform: none; /* override skeleton */
}
.myButton:hover {
	background:linear-gradient(to bottom, #925d0d 5%, #dec247 100%);
	background-color:#925d0d;
}
.myButton:active {
	position:relative;
	top:1px;
}

#place .text img, #about .text img { width:32px;height:32px;vertical-align: middle;}
#gallery .row {margin-bottom:0; padding-bottom:0;}
#gallery .columns {margin-left: 0;}
#gallery .column:first-child,
#gallery .columns:first-child {margin-left: 0;}
#gallery .four.columns {width: 33.3333333%;}
#gallery img {width:100%;}

/* rows */
.docs-header {
  text-transform: uppercase;
  font-size: 1.4rem;
  letter-spacing: .2rem;
  font-weight: 600; 
}
.docs-section {
  border-top: 1px solid #eee;
  padding: 4rem 0;
  margin-bottom: 0;
}
.example-grid .column,
.example-grid .columns {
  background: #EEE;
  text-align: center;
  border-radius: 4px;
  font-size: 1rem;
  text-transform: uppercase;
  height: 30px;
  line-height: 30px;
  margin-bottom: .75rem;
  font-weight: 600;
  letter-spacing: .1rem;
}
.docs-example .row,
.docs-example.row,
.docs-example form {margin-bottom: 0;}
.docs-example h1,
.docs-example h2,
.docs-example h3,
.docs-example h4,
.docs-example h5,
.docs-example h6 {margin-bottom: 1rem;}

/* Side Nav 
_________________________ */
/* The side navigation menu */

.hamburger {
  height: 30px;
  width: 30px;
  background: none;
  position: fixed;
  z-index: 2; /* Stay on top */
  top: 15px; /* Stay at the top */
  right: 15px;
}
.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background: rgb(16,22,84);
  background: linear-gradient(90deg, rgba(16,22,84,1.0) 0%, rgba(16,22,84,0.9) 46%, rgba(102,109,184,0.9) 100%);
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px; /* Place content 60px from the top */
  transition: 0.7s; /* 0.7 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav a, .sidenav button {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #fff;
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidenav :hover {color: #2bc6ff;}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  border: 0;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

img {
  max-width: 100%;
}

/* Fix mailchimp signup on small screens */
#mc_embed_signup {
  max-width: 100vw;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

footer {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

footer > .navigation > a {
  display: block;
}
 
.post-date {
  text-align: right;
}

.logo-inline {
  margin-top: 2rem;
}

img.screenshot {
  border: 2px dashed grey;
  opacity: 0.5;
}

blockquote {
  background-color: $brand-light-blue;
  font-style: italic;
  color: white;
  padding-left: 1em;
}

/* mobile flow */

/* For devices smaller than 1075px */
@media (max-width: 1075px) {
  #pricing h2 {font-size: 3rem;}
  #pricing .button {margin-top: 1.2rem;}
}

/* For devices smaller than 820px */
@media (max-width: 820px) {
  .contents {padding:4rem 30px;}
}

/* For devices smaller than 789px */
@media (max-width: 789px) {
  #pricing h2 {text-align:center;}
}

@media (max-width: 680px) {
.hero h2 {
  margin-top: 25px;
  margin-bottom: 50px;
  font-size: 2.5rem;
  padding-left: 2.0rem;
  padding-right: 2.0rem;
}
}

@media (max-width: 500px) {
  section.hero {padding-top:14rem;}
  .hero h1 img {width: 85%}
}

